--- a/documents/02_prototype/application/app/issues/issue_detailview.html
+++ b/documents/02_prototype/application/app/issues/issue_detailview.html
@@ -6,65 +6,49 @@
         <button type="button" class="paginate_button current" style="float: right;">Next</button>
     </div>
     <div class="single-issue">
-        <div class="title">DMS08517418</div>
-        <div class="summary">[DoraAnna] jp.kddilabs.smartnetwork.troubleshooting Application crash is occurring multiple times in JP market</div>
+        <div class="title">BTD25698741</div>
+        <div class="summary">Fix the bettle application UI as soon as possible to continue with the implementation</div>
     </div>
     <div class="single-issue">
-        <div class="title">DMS08517418</div>
-        <div class="summary">[DoraAnna] jp.kddilabs.smartnetwork.troubleshooting Application crash is occurring multiple times in JP market</div>
+        <div class="title">BTD25698741</div>
+        <div class="summary">Fix the bettle application UI as soon as possible to continue with the implementation</div>
     </div>
     <div class="single-issue">
-        <div class="title">DMS08517418</div>
-        <div class="summary">[DoraAnna] jp.kddilabs.smartnetwork.troubleshooting Application crash is occurring multiple times in JP market</div>
+        <div class="title">BTD25698741</div>
+        <div class="summary">Fix the bettle application UI as soon as possible to continue with the implementation</div>
     </div>
     <div class="single-issue">
-        <div class="title">DMS08517418</div>
-        <div class="summary">[DoraAnna] jp.kddilabs.smartnetwork.troubleshooting Application crash is occurring multiple times in JP market</div>
+        <div class="title">BTD25698741</div>
+        <div class="summary">Fix the bettle application UI as soon as possible to continue with the implementation</div>
     </div>
     <div class="single-issue">
-        <div class="title">DMS08517418</div>
-        <div class="summary">[DoraAnna] jp.kddilabs.smartnetwork.troubleshooting Application crash is occurring multiple times in JP market</div>
+        <div class="title">BTD25698741</div>
+        <div class="summary">Fix the bettle application UI as soon as possible to continue with the implementation</div>
     </div>
     <div class="single-issue">
-        <div class="title">DMS08517418</div>
-        <div class="summary">[DoraAnna] jp.kddilabs.smartnetwork.troubleshooting Application crash is occurring multiple times in JP market</div>
+        <div class="title">BTD25698741</div>
+        <div class="summary">Fix the bettle application UI as soon as possible to continue with the implementation</div>
     </div>
     <div class="single-issue">
-        <div class="title">DMS08517418</div>
-        <div class="summary">[DoraAnna] jp.kddilabs.smartnetwork.troubleshooting Application crash is occurring multiple times in JP market</div>
+        <div class="title">BTD25698741</div>
+        <div class="summary">Fix the bettle application UI as soon as possible to continue with the implementation</div>
     </div>
     <div class="single-issue">
-        <div class="title">DMS08517418</div>
-        <div class="summary">[DoraAnna] jp.kddilabs.smartnetwork.troubleshooting Application crash is occurring multiple times in JP market</div>
+        <div class="title">BTD25698741</div>
+        <div class="summary">Fix the bettle application UI as soon as possible to continue with the implementation</div>
     </div>
     <div class="single-issue">
-        <div class="title">DMS08517418</div>
-        <div class="summary">[DoraAnna] jp.kddilabs.smartnetwork.troubleshooting Application crash is occurring multiple times in JP market</div>
+        <div class="title">BTD25698741</div>
+        <div class="summary">Fix the bettle application UI as soon as possible to continue with the implementation</div>
     </div>
     <div class="single-issue">
-        <div class="title">DMS08517418</div>
-        <div class="summary">[DoraAnna] jp.kddilabs.smartnetwork.troubleshooting Application crash is occurring multiple times in JP market</div>
-    </div>
-    <div class="single-issue">
-        <div class="title">DMS08517418</div>
-        <div class="summary">[DoraAnna] jp.kddilabs.smartnetwork.troubleshooting Application crash is occurring multiple times in JP market</div>
-    </div>
-    <div class="single-issue">
-        <div class="title">DMS08517418</div>
-        <div class="summary">[DoraAnna] jp.kddilabs.smartnetwork.troubleshooting Application crash is occurring multiple times in JP market</div>
-    </div>
-    <div class="single-issue">
-        <div class="title">DMS08517418</div>
-        <div class="summary">[DoraAnna] jp.kddilabs.smartnetwork.troubleshooting Application crash is occurring multiple times in JP market</div>
-    </div>
-    <div class="single-issue">
-        <div class="title">DMS08517418</div>
-        <div class="summary">[DoraAnna] jp.kddilabs.smartnetwork.troubleshooting Application crash is occurring multiple times in JP market</div>
+        <div class="title">BTD25698741</div>
+        <div class="summary">Fix the bettle application UI as soon as possible to continue with the implementation</div>
     </div>
 </div>
 <div class="cell auto-size issues-view padding10">
-    <div>DMS08517418</div>
-    <div>[DoraAnna] jp.kddilabs.smartnetwork.troubleshooting Application crash is occurring multiple times in JP market</div>
+    <div>BTD25698741</div>
+    <div>Fix the bettle application UI as soon as possible to continue with the implementation</div>
     <div class="form-actions">
         <button class="button">Edit</button>
         <button class="button">Assign</button>
