--- a/documents/02_prototype/application/app/issues/issue_listview.html
+++ b/documents/02_prototype/application/app/issues/issue_listview.html
@@ -34,7 +34,7 @@
             <tr ng-repeat="issue in ctrl.issues">
                 <td>Bug</td>
                 <td>Key {{issue}}</td>
-                <td>[DoraAnna] jp.kddilabs.smartnetwork.troubleshooting Application crash is occurring multiple times in JP market {{issue}}</td>
+                <td>Fix the bettle application UI as soon as possible to continue with the implementation {{issue}}</td>
                 <td>Assignee {{issue}}</td>
                 <td>Reporter {{issue}}</td>
                 <td>Priority {{issue}}</td>
