--- a/documents/02_prototype/application/app/tests/plan/testinfo.html
+++ b/documents/02_prototype/application/app/tests/plan/testinfo.html
@@ -1,12 +1,12 @@
 <div class="app-bar darcula" style="border: 1px solid #3c3f41;border-bottom-color: #FFFFFF;">
     <ul class="app-bar-menu">
-        <li ng-class="{true:'active',false:''}[testMenuItemIndex === 1]"><a ui-sref="project.testcase.details">Details</a></li>
-        <li ng-class="{true:'active',false:''}[testMenuItemIndex === 2]"><a ui-sref="project.testcase.steps">Design Steps</a></li>
-        <li ng-class="{true:'active',false:''}[testMenuItemIndex === 3]"><a ui-sref="project.testcase.params">Parameters</a></li>
-        <li ng-class="{true:'active',false:''}[testMenuItemIndex === 4]"><a ui-sref="project.testcase.attachments">Attachments</a></li>
-        <li ng-class="{true:'active',false:''}[testMenuItemIndex === 5]"><a ui-sref="project.testcase.requirements">Req Coverage</a></li>
-        <li ng-class="{true:'active',false:''}[testMenuItemIndex === 6]"><a ui-sref="project.testcase.issues">Linked Defects</a></li>
-        <li ng-class="{true:'active',false:''}[testMenuItemIndex === 7]"><a ui-sref="project.testcase.history">History</a></li>
+        <li ng-class="{true:'active',false:''}[testMenuItemIndex === 1]"><a ui-sref="tp_project.testcase.details">Details</a></li>
+        <li ng-class="{true:'active',false:''}[testMenuItemIndex === 2]"><a ui-sref="tp_project.testcase.steps">Design Steps</a></li>
+        <li ng-class="{true:'active',false:''}[testMenuItemIndex === 3]"><a ui-sref="tp_project.testcase.params">Parameters</a></li>
+        <li ng-class="{true:'active',false:''}[testMenuItemIndex === 4]"><a ui-sref="tp_project.testcase.attachments">Attachments</a></li>
+        <li ng-class="{true:'active',false:''}[testMenuItemIndex === 5]"><a ui-sref="tp_project.testcase.requirements">Req Coverage</a></li>
+        <li ng-class="{true:'active',false:''}[testMenuItemIndex === 6]"><a ui-sref="tp_project.testcase.issues">Linked Defects</a></li>
+        <li ng-class="{true:'active',false:''}[testMenuItemIndex === 7]"><a ui-sref="tp_project.testcase.history">History</a></li>
     </ul>
 </div>
 <div class="example example-less padding10" ui-view="">
