--- a/documents/02_prototype/application/app/issues/search.html
+++ b/documents/02_prototype/application/app/issues/search.html
@@ -1,152 +1,158 @@
-<ul class="breadcrumbs2">
-    <li><a href=""><span class="icon mif-home"></span></a></li>
-    <li><a href="">Issues</a></li>
-    <li><a href="">{{ctrl.filter_type}}</a></li>
-    <li ng-show="ctrl.filter_name != ''"><a href="">{{ctrl.filter_name}}</a></li>
-</ul>
-<div class="example example-less bg-lighterGray">
-    <div class="grid">
-        <div class="row row-nomargin cell-auto-size">
-            <div class="cell">
-                <label>Project</label>
-                <div class="input-control search-select2 full-size" data-role="select" data-placeholder="All">
-                    <select id="project-select" multiple>
-                        <option>Project 1</option>
-                        <option>Project 2</option>
-                        <option>Project 3</option>
-                        <option>Project 4</option>
-                        <option>Project 5</option>
-                        <option>Project 6</option>
-                        <option>Project 7</option>
-                        <option>Project 8</option>
-                        <option>Project 9</option>
-                        <option>Project 10</option>
-                    </select>
+<div class="flex-grid no-responsive-future" style="height: 100%;">
+    <div class="row" style="height: 100%;">
+        <div class="cell auto-size bg-white padding10">
+            <ul class="breadcrumbs2">
+                <li><a href=""><span class="icon mif-home"></span></a></li>
+                <li><a href="">Issues</a></li>
+                <li><a href="">{{ctrl.filter_type}}</a></li>
+                <li ng-show="ctrl.filter_name != ''"><a href="">{{ctrl.filter_name}}</a></li>
+            </ul>
+            <div class="example example-less bg-lighterGray">
+                <div class="grid">
+                    <div class="row row-nomargin cell-auto-size">
+                        <div class="cell">
+                            <label>Project</label>
+                            <div class="input-control search-select2 full-size" data-role="select" data-placeholder="All">
+                                <select id="project-select" multiple>
+                                    <option>Project 1</option>
+                                    <option>Project 2</option>
+                                    <option>Project 3</option>
+                                    <option>Project 4</option>
+                                    <option>Project 5</option>
+                                    <option>Project 6</option>
+                                    <option>Project 7</option>
+                                    <option>Project 8</option>
+                                    <option>Project 9</option>
+                                    <option>Project 10</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <label>Module</label>
+                            <div class="input-control search-select2 full-size" data-role="select" data-placeholder="All">
+                                <select id="module-select" multiple>
+                                    <option>Project 1</option>
+                                    <option>Project 2</option>
+                                    <option>Project 3</option>
+                                    <option>Project 4</option>
+                                    <option>Project 5</option>
+                                    <option>Project 6</option>
+                                    <option>Project 7</option>
+                                    <option>Project 8</option>
+                                    <option>Project 9</option>
+                                    <option>Project 10</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <label>Type</label>
+                            <div class="input-control search-select2 full-size" data-role="select" data-placeholder="All">
+                                <select id="type-select" multiple>
+                                    <option>Bug</option>
+                                    <option>New Feature</option>
+                                    <option>Improvement</option>
+                                    <option>Task</option>
+                                    <option>Verification</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <label>Categories</label>
+                            <div class="input-control search-select2 full-size" data-role="select" data-placeholder="All">
+                                <select id="category-select" multiple>
+                                    <option>category 1</option>
+                                    <option>category 2</option>
+                                    <option>category 3</option>
+                                    <option>category 4</option>
+                                    <option>category 5</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <label>Tags</label>
+                            <div class="input-control search-select2 full-size" data-role="select" data-placeholder="All">
+                                <select id="tags-select" multiple>
+                                    <option>Tag 1</option>
+                                    <option>Tag 2</option>
+                                    <option>Tag 3</option>
+                                    <option>Tag 4</option>
+                                    <option>Tag 5</option>
+                                    <option>Tag 6</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row row-nomargin cell-auto-size">
+                        <div class="cell">
+                            <label>Priority</label>
+                            <div class="input-control search-select2 full-size" data-role="select" data-placeholder="All">
+                                <select id="priority-select" multiple>
+                                    <option>Blocker</option>
+                                    <option>Critical</option>
+                                    <option>Major</option>
+                                    <option>Normal</option>
+                                    <option>Minor</option>
+                                    <option>Trivial</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <label>State</label>
+                            <div class="input-control search-select2 full-size" data-role="select" data-placeholder="All">
+                                <select id="state-select" multiple>
+                                    <option>Open</option>
+                                    <option>In Progress</option>
+                                    <option>Reopened</option>
+                                    <option>Resolved</option>
+                                    <option>Closed</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <label>Resolution</label>
+                            <div class="input-control search-select2 full-size" data-role="select" data-placeholder="All">
+                                <select id="resolution-select" multiple>
+                                    <option>Fixed</option>
+                                    <option>Won't fix</option>
+                                    <option>Duplicate</option>
+                                    <option>Incomplete</option>
+                                    <option>Cannot reproduce</option>
+                                    <option>Done</option>
+                                    <option>Won't do</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <label>Contains Text</label>
+                            <div class="input-control text full-size"  data-role="input">
+                                <input type="text" placeholder="Enter any text">
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <label>&nbsp;</label>
+                            <div class="form-actions">
+                                <button type="button" class="button primary">Search</button>
+                                <button type="button" class="button primary">Save</button>
+                                <button type="button" class="button primary">Save as</button>
+                                <button type="button" class="button">More</button>
+                            </div> 
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="cell">
-                <label>Module</label>
-                <div class="input-control search-select2 full-size" data-role="select" data-placeholder="All">
-                    <select id="module-select" multiple>
-                        <option>Project 1</option>
-                        <option>Project 2</option>
-                        <option>Project 3</option>
-                        <option>Project 4</option>
-                        <option>Project 5</option>
-                        <option>Project 6</option>
-                        <option>Project 7</option>
-                        <option>Project 8</option>
-                        <option>Project 9</option>
-                        <option>Project 10</option>
-                    </select>
+            <div class="example example-less issues">
+                <h3>Issues</h3>
+                <div class="dropdown-button place-right" style="margin-top: -2.5rem;">
+                    <button class="button dropdown-toggle">View</button>
+                    <ul class="split-content d-menu place-right" data-role="dropdown">
+                        <li><a ui-sref="filter.detailview">Detail View</a></li>
+                        <li><a ui-sref="filter.listview">List view</a></li>
+                    </ul>
                 </div>
-            </div>
-            <div class="cell">
-                <label>Type</label>
-                <div class="input-control search-select2 full-size" data-role="select" data-placeholder="All">
-                    <select id="type-select" multiple>
-                        <option>Bug</option>
-                        <option>New Feature</option>
-                        <option>Improvement</option>
-                        <option>Task</option>
-                        <option>Verification</option>
-                    </select>
-                </div>
-            </div>
-            <div class="cell">
-                <label>Categories</label>
-                <div class="input-control search-select2 full-size" data-role="select" data-placeholder="All">
-                    <select id="category-select" multiple>
-                        <option>category 1</option>
-                        <option>category 2</option>
-                        <option>category 3</option>
-                        <option>category 4</option>
-                        <option>category 5</option>
-                    </select>
-                </div>
-            </div>
-            <div class="cell">
-                <label>Tags</label>
-                <div class="input-control search-select2 full-size" data-role="select" data-placeholder="All">
-                    <select id="tags-select" multiple>
-                        <option>Tag 1</option>
-                        <option>Tag 2</option>
-                        <option>Tag 3</option>
-                        <option>Tag 4</option>
-                        <option>Tag 5</option>
-                        <option>Tag 6</option>
-                    </select>
+                <div id="details-view" class="row row-nomargin padding5" ui-view="">
+                    <!-- Issue list will display here-->
                 </div>
             </div>
         </div>
-        <div class="row row-nomargin cell-auto-size">
-            <div class="cell">
-                <label>Priority</label>
-                <div class="input-control search-select2 full-size" data-role="select" data-placeholder="All">
-                    <select id="priority-select" multiple>
-                        <option>Blocker</option>
-                        <option>Critical</option>
-                        <option>Major</option>
-                        <option>Normal</option>
-                        <option>Minor</option>
-                        <option>Trivial</option>
-                    </select>
-                </div>
-            </div>
-            <div class="cell">
-                <label>State</label>
-                <div class="input-control search-select2 full-size" data-role="select" data-placeholder="All">
-                    <select id="state-select" multiple>
-                        <option>Open</option>
-                        <option>In Progress</option>
-                        <option>Reopened</option>
-                        <option>Resolved</option>
-                        <option>Closed</option>
-                    </select>
-                </div>
-            </div>
-            <div class="cell">
-                <label>Resolution</label>
-                <div class="input-control search-select2 full-size" data-role="select" data-placeholder="All">
-                    <select id="resolution-select" multiple>
-                        <option>Fixed</option>
-                        <option>Won't fix</option>
-                        <option>Duplicate</option>
-                        <option>Incomplete</option>
-                        <option>Cannot reproduce</option>
-                        <option>Done</option>
-                        <option>Won't do</option>
-                    </select>
-                </div>
-            </div>
-            <div class="cell">
-                <label>Contains Text</label>
-                <div class="input-control text full-size"  data-role="input">
-                    <input type="text" placeholder="Enter any text">
-                </div>
-            </div>
-            <div class="cell">
-                <label>&nbsp;</label>
-                <div class="form-actions">
-                    <button type="button" class="button primary">Search</button>
-                    <button type="button" class="button primary">Save</button>
-                    <button type="button" class="button primary">Save as</button>
-                    <button type="button" class="button">More</button>
-                </div> 
-            </div>
-        </div>
-    </div>
-</div>
-<div class="example example-less issues">
-    <h3>Issues</h3>
-    <div class="dropdown-button place-right" style="margin-top: -2.5rem;">
-        <button class="button dropdown-toggle">View</button>
-        <ul class="split-content d-menu place-right" data-role="dropdown">
-            <li><a ui-sref="filter.detailview">Detail View</a></li>
-            <li><a ui-sref="filter.listview">List view</a></li>
-        </ul>
-    </div>
-    <div id="details-view" class="row row-nomargin padding5" ui-view="">
-        <!-- Issue list will display here-->
     </div>
 </div>
